# Lem_in

./: CMakeLists.txt  Makefile  a.exe.stackdump  algorithm  algorithm.c  auteur  construct1.c  ft_strsplit.c  func.c  func1.c  func2.c  func3.c  func4.c  func5.c  func6.c  func7.c  get_next_line.c  get_next_line.h  good  good2  header  header.h  last  lem  lem.exe.stackdump  lem_in  lem_in.c  m  map  map2  sim  solve.c  solve2.c  solve3.c  solve4.c  test  test2  test3  test6
